Update image & link

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
   <h3>Experience</h3>
   <h4>Institute of Image Communication and Network Engineering, Shanghai     --   2016.12-2017.06</h4>
   <ul>
-    <li>Participated in Pulmonary Nodule Screening Use Ensembled Deep Neural Networks project</li>
+    <li>Participated in <a href="https://www.jiqizhixin.com/articles/2017-10-24">Pulmonary-Nodule-Screening</a> Use Ensembled Deep Neural Networks project</li>
     <li>Use cycle-GAN to expend sample data, training for ensemble three neural network models to get precisely prediction.</li>
     <li>Also participate in an object recognition project that use SURF + RANSAC algorithms, and use pre-trained CNN to
 judge the prediction made by this model</li>
   </ul>
   <h4>Care Spot Website Development</h4>
   <ul>
-    <li>Develop a web app to afford better service for Care Spot Android APP.</li
+    <li>Develop a web app to afford better service for <a href="https://chengjiayao.github.io/CareSpot-Web/">Care Spot</a> Android APP.</li
     <li>Designed user interface with JavaScript, HTML, CSS, and Bootstrap</li>
   </ul>
   <h4>Android App Focus on Find Nursing Room: Care Spot</h4>
@@ -60,6 +60,7 @@ judge the prediction made by this model</li>
     <li>Add loss function between latent codes and predicted labels to give better constrains to aimed features, add penalty term
 to decrease correlations between attributes.</li>
   </ul>
+  <img class="imgg" src="image/GAN.jpg" alt="GAN" height=400 shape=>
   <h4>Kaggle Competition: Titanic, Learning from Disaster</h4>
   <ul>
     <li>Use Python to build 10 kinds of classic machine learning algorithms and neural networks to get survive predictions.</li
