--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="top-container">
       <h1 class="ff">Welcom to My Site </h1>
-      <img class="imgg" src="image/JiayaoCheng.jpg" alt="JiayaoCheng" height=250 shape=>
+      <!-img class="imgg" src="image/JiayaoCheng.jpg" alt="JiayaoCheng" height=250 shape= ->
       <h1 class="ff">I'm Jiayao Cheng</h1>
       <p class="intro">A programer focus on Java Developing and Machine Learning, and also a beginner of Web Design</p>
     </div>
